cmake_minimum_required(VERSION 2.8.11)
project(modelisation)
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
add_executable(testParkMiller test/testParkMiller.cpp)
add_subdirectory(src)
#add_subdirectory(test)
target_link_libraries(testParkMiller PUBLIC libdvect)
target_include_directories(testParkMiller PUBLIC libdvect)
